[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/player/player.gd" type="Script" id=1]
[ext_resource path="res://player/camera/spring_arm.gd" type="Script" id=2]
[ext_resource path="res://player/player/model/pix.fbx" type="PackedScene" id=3]
[ext_resource path="res://player/camera/crosshairs/crosshair-disc.png" type="Texture" id=4]
[ext_resource path="res://player/player/ring.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/camera/frisbee/arrow-right.png" type="Texture" id=6]
[ext_resource path="res://player/camera/frisbee/arrow-left.png" type="Texture" id=7]
[ext_resource path="res://player/camera/frisbee/arrow-up.png" type="Texture" id=8]
[ext_resource path="res://player/camera/frisbee/arrow-down.png" type="Texture" id=9]

[sub_resource type="CylinderShape" id=3]
height = 1.15
radius = 0.3

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Right:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Left:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Left:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Up:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Up:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Down:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Down:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Right:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 20, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Left:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -20, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Left:self_modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Down:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Down:self_modulate")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Up:rect_position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Up:self_modulate")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "out"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Right:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 0 ), Vector2( 50, 0 ), Vector2( 60, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:self_modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Down:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ), Vector2( 0, 50 ), Vector2( 0, 60 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Down:self_modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Up:self_modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Up:rect_position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -50 ), Vector2( 0, -60 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Left:rect_position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -20, 0 ), Vector2( -50, 0 ), Vector2( -60, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Left:self_modulate")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "spin"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CylinderShape" id=1]
height = 0.75
radius = 0.15

[node name="Pix" type="KinematicBody"]
collision_layer = 2
collision_mask = 33
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
camera_offset = Vector3( 0, 2.5, 0 )

[node name="Collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )
shape = SubResource( 3 )

[node name="SpringArm" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
spring_length = 4.0
margin = 0.2
script = ExtResource( 2 )

[node name="CameraHolder" type="Spatial" parent="SpringArm"]

[node name="Camera" type="Camera" parent="SpringArm/CameraHolder"]
current = true
near = 0.01
far = 1000.0

[node name="CenterContainer" type="CenterContainer" parent="SpringArm/CameraHolder/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Crosshair" type="TextureRect" parent="SpringArm/CameraHolder/Camera/CenterContainer"]
modulate = Color( 1, 0, 1, 1 )
margin_left = 200.0
margin_top = 160.0
margin_right = 200.0
margin_bottom = 160.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Right" type="TextureRect" parent="SpringArm/CameraHolder/Camera/CenterContainer/Crosshair"]
modulate = Color( 1, 0, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="Left" type="TextureRect" parent="SpringArm/CameraHolder/Camera/CenterContainer/Crosshair"]
modulate = Color( 1, 0, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="Up" type="TextureRect" parent="SpringArm/CameraHolder/Camera/CenterContainer/Crosshair"]
modulate = Color( 1, 0, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="Down" type="TextureRect" parent="SpringArm/CameraHolder/Camera/CenterContainer/Crosshair"]
modulate = Color( 1, 0, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 4

[node name="FrisbeeAnim" type="AnimationPlayer" parent="SpringArm/CameraHolder/Camera/CenterContainer/Crosshair"]
autoplay = "RESET"
anims/RESET = SubResource( 4 )
anims/in = SubResource( 5 )
anims/out = SubResource( 6 )

[node name="CrosshairAnim" type="AnimationPlayer" parent="SpringArm/CameraHolder/Camera/CenterContainer/Crosshair"]
anims/RESET = SubResource( 7 )
anims/spin = SubResource( 8 )

[node name="RayCast" type="RayCast" parent="SpringArm/CameraHolder/Camera"]
visible = false
enabled = true
cast_to = Vector3( 0, 0, -10 )
collision_mask = 9
collide_with_areas = true
debug_shape_thickness = 5

[node name="Start" type="Position3D" parent="SpringArm/CameraHolder/Camera/RayCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="End" type="Position3D" parent="SpringArm/CameraHolder/Camera/RayCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )

[node name="Damage" type="Area" parent="."]
collision_layer = 2
collision_mask = 24

[node name="Collider" type="CollisionShape" parent="Damage"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
shape = SubResource( 1 )

[node name="ModelHolder" type="Spatial" parent="."]

[node name="Model" parent="ModelHolder" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.425, 0, 0 )

[node name="Body" type="Spatial" parent="ModelHolder/Model"]
transform = Transform( 1, 0, 2.13163e-14, 0, 1, 0, -2.13163e-14, 0, 1, 0.425, 0.75, -1.06581e-14 )

[node name="Head" type="Spatial" parent="ModelHolder/Model/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )

[node name="LeftWrist" type="Spatial" parent="ModelHolder/Model/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0 )

[node name="RightWrist" type="Spatial" parent="ModelHolder/Model/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 0 )

[node name="Hand" type="Spatial" parent="ModelHolder/Model/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )

[node name="RightRing" parent="ModelHolder" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.3, 0.75, 0 )
visible = false

[node name="LeftRing" parent="ModelHolder" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.3, 0.75, 0 )
visible = false

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Reload" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Damage" to="." method="_on_damage_area_entered"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
